# document_catalog_query

./: .gitignore  README.md  openapi.snapshot.json  pyproject.toml  tool.toml
docs/: TOOL_DOCUMENT_CATALOG_QUERY_EXECUTION_PLAN.md  TOOL_DOCUMENT_CATALOG_QUERY_ROADMAP.md  TOOL_DOCUMENT_CATALOG_QUERY_SOT.md  TOOL_TEMPLATE.md  run_tests.sh
docs/prompts/: 00_scaffold_repo.md  01_contracts_and_determinism.md  02_catalog_loader.md  03_service_layer_ordering.md  04_api_interface.md  05_openapi_snapshot.md  06_determinism_and_hash_tests.md  07_final_gate.md  08_cli_interface.md  09_release_readiness.md  10_sot_invariant_check.md  README.md
docs/tool_build_prompts/: copilot_prompt.md  document_catalog_query.md
docs/tool_specs/: document_catalog_query.md
document_catalog_query/: __init__.py  tool.py
document_catalog_query/api/: __init__.py  deps.py  openapi_snapshot.py  router.py  schemas.py
document_catalog_query/cli/: __init__.py  main.py
document_catalog_query/core/: __init__.py  catalog_loader.py  determinism.py  service.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_cli_smoke.py  test_contract_schemas.py  test_determinism_json.py  test_openapi_snapshot.py  test_ordering_pagination.py
tests/fixtures/: catalog_shuffled.json  catalog_small.json
