[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "document_catalog_query"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "pydantic>=2",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["document_catalog_query*"]
